# RISC-V_Simulator

./: .gitignore  ALU.hpp  CDB.hpp  CMakeLists.txt  CPU.cpp  CPU.hpp  ROB.hpp  bus.hpp  memory.hpp  predictor.hpp  regs.hpp  rs.hpp  simulator.cpp  utils.cpp  utils.hpp
